Topology Automasking and 2D Falloff don't work correctly together #70140

Closed
opened 2019-09-21 14:48:56 +02:00 by Metin Seven · 5 comments

System Information
Operating system: Windows 10 Pro 64-bit
Graphics card: NVIDIA GeForce RTX 2080 Ti

Blender Version
Broken: Blender 2.81 Alpha, September 21, 12:20:50 - ef45d1c8cd

Short description of error
In Sculpt Mode, the Topology Automasking and 2D Falloff options don't work correctly when both are activated.

Exact steps for others to reproduce the error

  1. Subdivide the default cube a few times until it is a sphere, by pressing Control + 2 or 3.
  2. Apply the Subdivision modifier.
  3. Enter Edit Mode, select all.
  4. Shift + D to duplicate, move the copy until the spheres are a bit separated, but still intersect.
  5. Enter Sculpt Mode.
  6. Activate Grab brush.
  7. Check Topology Automasking and Options ➔ 2D Falloff.
  8. Try moving the spheres with the Grab brush. Sometimes one of the two spheres will not move at all, sometimes just a part of it will move.
**System Information** Operating system: Windows 10 Pro 64-bit Graphics card: NVIDIA GeForce RTX 2080 Ti **Blender Version** Broken: Blender 2.81 Alpha, September 21, 12:20:50 - ef45d1c8cd43 **Short description of error** In Sculpt Mode, the Topology Automasking and 2D Falloff options don't work correctly when both are activated. **Exact steps for others to reproduce the error** 1. Subdivide the default cube a few times until it is a sphere, by pressing Control + 2 or 3. 1. Apply the Subdivision modifier. 1. Enter Edit Mode, select all. 1. Shift + D to duplicate, move the copy until the spheres are a bit separated, but still intersect. 1. Enter Sculpt Mode. 1. Activate Grab brush. 1. Check Topology Automasking and Options ➔ 2D Falloff. 1. Try moving the spheres with the Grab brush. Sometimes one of the two spheres will not move at all, sometimes just a part of it will move.
Author

Added subscriber: @MetinSeven-1

Added subscriber: @MetinSeven-1
Member

Added subscribers: @PabloDobarro, @lichtwerk

Added subscribers: @PabloDobarro, @lichtwerk
Pablo Dobarro was assigned by Philipp Oeser 2019-09-23 14:18:58 +02:00
Member

Can confirm there is something weird going on.

  • looks like with 2D falloff enabled I can only ever get one side affected (even when I move to the other side and start a new stroke there)
  • this is not the case if 2D Falloff is disabled

@PabloDobarro : mind checking?

Can confirm there is something weird going on. - looks like with 2D falloff enabled I can only ever get one side affected (even when I move to the other side and start a new stroke there) - this is not the case if 2D Falloff is disabled @PabloDobarro : mind checking?

This issue was referenced by aea8c0102a

This issue was referenced by aea8c0102ac79b04147458ff07a0886b87396b30
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70140
No description provided.