Fix T70140: Topology Automasking and 2D Falloff don't work correctly together

Reviewed By: jbakker

Maniphest Tasks: T70140

Differential Revision: https://developer.blender.org/D5878